remove autosink stuff until it doesn't open devices in NULL
Original commit message from CVS:
remove autosink stuff until it doesn't open devices in NULL

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,23 +1,12 @@
-2005-02-27  Maciej Katafiasz  <mathrick@freedesktop.org>
+2005-02-28  Thomas Vander Stichele  <thomas at apestaart dot org>
 
-	reviewed by: <delete if not using a buddy>
+	* configure.ac:
+	  remove autosink stuff until it doesn't open devices in NULL
+
+2005-02-27  Maciej Katafiasz  <mathrick@freedesktop.org>
 
 	* ext/shout2/gstshout2.c: (gst_shout2send_get_type):
 	* gst/qtdemux/qtdemux.c: (qtdemux_parse), (qtdemux_parse_trak):
-	* po/af.po:
-	* po/az.po:
-	* po/cs.po:
-	* po/en_GB.po:
-	* po/hu.po:
-	* po/it.po:
-	* po/nb.po:
-	* po/nl.po:
-	* po/or.po:
-	* po/sq.po:
-	* po/sr.po:
-	* po/sv.po:
-	* po/uk.po:
-	* po/vi.po:
 
 2005-02-18  Ross Burton  <ross@burtonini.com>
 
