--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2005-03-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* configure.ac:
+	* gst/autodetect/gstautoaudiosink.c:
+	(gst_auto_audio_sink_class_init), (gst_auto_audio_sink_init),
+	(gst_auto_audio_sink_detect), (gst_auto_audio_sink_change_state):
+	* gst/autodetect/gstautoaudiosink.h:
+	* gst/autodetect/gstautovideosink.c:
+	(gst_auto_video_sink_class_init), (gst_auto_video_sink_init),
+	(gst_auto_video_sink_detect), (gst_auto_video_sink_change_state):
+	* gst/autodetect/gstautovideosink.h:
+	  Fix testsuite, re-enable autosink.
+
 2005-02-28  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* configure.ac:
