--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,38 @@
+2005-03-09  Jan Schmidt  <thaytan@mad.scientist.com>
+
+	* gst/videoscale/gstvideoscale.c:
+	(gst_videoscale_handle_src_event):
+	Events have a perfectly good copy_on_write implementation,
+	use it so we preserve GstData flags too.
+
+	* sys/ximage/ximagesink.c: (gst_ximagesink_ximage_put),
+	(gst_ximagesink_handle_event), (gst_ximagesink_chain),
+	(gst_ximagesink_send_pending_navigation), (gst_ximagesink_expose):
+	* sys/ximage/ximagesink.h:
+	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_xvimage_put),
+	(gst_xvimagesink_handle_event), (gst_xvimagesink_chain),
+	(gst_xvimagesink_buffer_free), (gst_xvimagesink_buffer_alloc),
+	(gst_xvimagesink_interface_supported),
+	(gst_xvimagesink_send_pending_navigation),
+	(gst_xvimagesink_navigation_send_event),
+	(gst_xvimagesink_set_xwindow_id), (gst_xvimagesink_expose),
+	(gst_xvimagesink_colorbalance_list_channels),
+	(gst_xvimagesink_colorbalance_set_value),
+	(gst_xvimagesink_colorbalance_get_value),
+	(gst_xvimagesink_set_property), (gst_xvimagesink_get_property),
+	(gst_xvimagesink_finalize), (gst_xvimagesink_init),
+	(gst_xvimagesink_base_init), (gst_xvimagesink_class_init),
+	(gst_xvimagesink_get_type), (plugin_init):
+	* sys/xvimage/xvimagesink.h:
+	Move send_pending_navigation functions outside the stream_lock and let
+	them lock/unlock when they need so we don't hold the stream lock
+	while sending the event upstream.
+	Add need_expose flag to avoid an unnecessary screen update if an
+	incoming buffer beat us to it.
+	Unset the GST_EVENT_COMMON_FLAG_NEED_RESPONSE flag to avoid blocking on 
+	queues while sending navigation events, since we don't need a reply.
+	Handle filler events for still frames.
+
 === release 0.8.8 ===
 
 2005-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>
