--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-09  Jan Schmidt  <thaytan@mad.scientist.com>
+
+	* configure.ac:
+	  Up the gstreamer core requirement to 0.8.9.1
+
 2005-03-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* configure.ac:
