--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-03-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/esd/esdsink.c: (gst_esdsink_class_init),
+	(gst_esdsink_soundserver_running), (gst_esdsink_get_property),
+	(gst_esdsink_factory_init):
+	* gst/autodetect/gstautoaudiosink.c:
+	(gst_auto_audio_sink_find_best):
+	  Add initial code for soundserver-running-detection.
+
 2005-03-09  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* configure.ac:
