--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
 	* gst/playback/gstplaybin.c: (gen_video_element),
 	(gen_audio_element):
-	  Use auto* elements as defaults.
+	  Use auto* elements as defaults. Fixed #169289.
 
 2005-03-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
@@ -21,22 +21,22 @@
 2005-03-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* configure.ac:
-	  Fix FAAD detection problems against FAAD-CVS.
+	  Fix FAAD detection problems against FAAD-CVS. Fixes #166113.
 	* ext/faad/gstfaad.c: (gst_faad_class_init),
 	(gst_faad_chanpos_to_gst), (gst_faad_srcconnect), (gst_faad_sync),
 	(gst_faad_chain):
-	  Fix FAAD channel positions for mono/stereo against FAAD CVS.
-	  Implement raw stream sync support for AAC+ radio support. Embed
-	  info structure in our function to prevent unneeded excessive
-	  allocations.
+	  Fix FAAD channel positions for mono/stereo against FAAD CVS, fixing
+	  #168558. Implement raw stream sync support for AAC+ radio support,
+	  fixing #166031. Embed info structure in our function to prevent
+	  unneeded excessive allocations.
 	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_populate),
 	(gst_ogg_demux_push):
 	  Only set first/last positions when we search for them. Fixes
-	  invalid length reporting for some video files.
+	  invalid length reporting for some video files. Fixes #169081.
 	* gst/playback/gstdecodebin.c: (remove_element_chain):
-	  Always remove only our own kids.
+	  Always remove only our own kids. Fixes #169400.
 	* gst/qtdemux/qtdemux.c: (qtdemux_parse), (qtdemux_parse_trak):
-	  Fix ESDS atom finding bug.
+	  Fix ESDS atom finding bug, fixing #149158.
 	* gst/typefind/gsttypefindfunctions.c: (aac_type_find):
 	  Implement frame-finding (similar to MP3) to support AAC+ radio.
 
