--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-03-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_get_xv_support),
+	(gst_xvimagesink_xcontext_get):
+	  Remove broken "fix" for little-endian RGB overlays, and add the
+	  correct counterpart of the fix (fixes RGB/Xv).
+
 2005-03-10  Ash  <thatistosayiseenem@gawab.com>
 
 	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
