gst/typefind/gsttypefindfunctions.c: Remove unused macros.
Original commit message from CVS:
* gst/typefind/gsttypefindfunctions.c:
Remove unused macros.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2005-03-12  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/typefind/gsttypefindfunctions.c:
+	  Remove unused macros.
+
+2005-03-12  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/typefind/gsttypefindfunctions.c:
 	(mp3_type_frame_length_from_header), (mp3_type_find):
 	  Add support for "free format mp3" extension to mp3 typefinding.
 
