--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-03-12  Gergely Nagy  <algernon@bonehunter.rulez.org>
+
+	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/theora/theoraenc.c: (gst_theora_enc_class_init),
+	(gst_theora_enc_init), (theora_enc_sink_link),
+	(theora_enc_set_property), (theora_enc_get_property):
+	  Expose sharpness setting (#169629).
+
 2005-03-12  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/typefind/gsttypefindfunctions.c:
