--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-03-14  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_open),
+	(gst_v4lsrc_get_any_caps), (gst_v4lsrc_getcaps):
+	  Implement special any-caps that is somewhat more exact when
+	  not using autoprobing.
+
+2005-03-14  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* ext/faac/gstfaac.c: (gst_faac_init), (gst_faac_sinkconnect),
 	(gst_faac_srcconnect), (gst_faac_chain):
 	  Long live capsnego... Move over to explicit caps for now...
