--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2005-03-15  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/playback/gstdecodebin.c: (gst_decode_bin_class_init),
+	(got_redirect), (try_to_link_1):
+	* gst/playback/gstplaybasebin.c: (gst_play_base_bin_class_init),
+	(group_commit), (got_redirect), (setup_source),
+	(gst_play_base_bin_change_state):
+	* gst/playback/gstplaybasebin.h:
+	* gst/qtdemux/qtdemux.c: (gst_qtdemux_class_init),
+	(gst_qtdemux_handle_sink_event), (gst_qtdemux_loop_header),
+	(qtdemux_parse_tree):
+	* gst/qtdemux/qtdemux.h:
+	  Some crap for the redirect signal. Also fix hang on redirect-files
+	  in qtdemux.
+
 2005-03-14  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_open),
